Update 'From' location to something more meaningful

--- a/index.html
+++ b/index.html
@@ -950,7 +950,7 @@
                             </div>
                             <div class="info-box">
                                 <span class="info-label">From</span>
-                                <span class="info-value">Surrey via 2 Ferries</span>
+                                <span class="info-value">38 Days of Us</span>
                             </div>
                             <div class="info-box">
                                 <span class="info-label">Destination</span>
