Change alert message to reflect we're going together

--- a/index.html
+++ b/index.html
@@ -1057,7 +1057,7 @@
             
             // Show message
             setTimeout(() => {
-                alert('🎉 Deal! You\'re stuck with me now! See you on Gabriola! 🏝️❤️');
+                alert('🎉 Adventure awaits us! Let\'s go to Gabriola together! 🏝️❤️');
             }, 800);
         }
         
